package com.project.costestimator.domain.enums;
public enum CalculationBasis { PER_HOUR, PER_SHIFT, PER_DAY, PER_WEEK, PER_MONTH, PER_UNIT, FIXED, PERCENTAGE }
