package com.project.costestimator.domain.enums;
public enum CostCategory { SALARY, OVERTIME, ACCOMMODATION, FOOD, TRANSPORTATION, RENTAL, DEPRECIATION, FUEL, MAINTENANCE, INSURANCE, MATERIAL, MOBILIZATION, DEMOBILIZATION, OVERHEAD, OTHER }
