package com.project.costestimator.domain.enums;
public enum RateType { FUEL_PRICE, EXCHANGE_RATE, INFLATION_RATE, OVERHEAD_RATE, PROFIT_RATE, TAX_RATE }
