package com.project.costestimator.domain.enums;
public enum UnitOfMeasure { PERSON, HOUR, DAY, MONTH, LITER, KILOWATT_HOUR, KILOGRAM, TON, CUBIC_METER, SQUARE_METER, METER, PIECE, PERCENT }
